last update to week 3 homework

--- a/ea-python-2020-03-spatial-vector-data-hw.ipynb
+++ b/ea-python-2020-03-spatial-vector-data-hw.ipynb
@@ -42,7 +42,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "3672b417143cb22b5ee80f9dbc375abf",
+     "checksum": "2e6251f518ae3c5f50c60203b93f9d09",
      "grade": false,
      "grade_id": "cell-775e4458855b1ef7",
      "locked": true,
@@ -54,7 +54,7 @@
    "source": [
     "# Week 3 Spatial Vector Data Homework \n",
     "\n",
-    "As you complete this assignment, be sure to (10 points total):\n",
+    "As you complete this assignment, be sure to:\n",
     "\n",
     "* Follow `pep8` standards. Use the pep8 tool in Jupyter Notebook to ensure proper formatting (however, note that it does not catch everything!).\n",
     "* Keep comments concise and strategic. Don't comment every line!\n",
@@ -66,7 +66,8 @@
     "   2. all paths should be created dynamically using the os package to ensure that they work across operating systems \n",
     "\n",
     "## Assignment Background\n",
-    "In this assignment, you will explore an area in California called the [San Joachin Experimental Range](https://www.neonscience.org/field-sites/field-sites-map/SJER) known by the acronym SJER on the NEON Website. You will look at data from this area next week more closely next week when we discuss uncertainty and lidar data. \n",
+    "\n",
+    "In this assignment, you will explore an area in California called the [San Joaquin Experimental Range](https://www.neonscience.org/field-sites/field-sites-map/SJER) known by the acronym SJER on the NEON Website. You will look at data from this area next week more closely next week when we discuss uncertainty and lidar data. \n",
     "\n",
     "The data that you will use for this week is available from **earthpy** using the following download: \n",
     "\n",
@@ -141,7 +142,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "76c1e318970f1f35b1a88d3f8918d244",
+     "checksum": "22c1675e6d7051861337c251adb300c0",
      "grade": false,
      "grade_id": "cell-8d8db274f6ca7dfc",
      "locked": true,
@@ -152,7 +153,7 @@
    },
    "source": [
     "\n",
-    "## Plot 1 - Roads Map and Legend (20 points)\n",
+    "## Plot 1 - Roads Map and Legend (25 points)\n",
     "\n",
     "The NEON **SJER** field site is located in California. Your first task is to explore the area by creating a map of California roads that has symbology that represents different road types.\n",
     "\n",
@@ -160,7 +161,7 @@
     "\n",
     "1. Open the `california/madera-county-roads/tl_2013_06039_roads.shp` file located in your `spatial-vector-lidar` data download using GeoPandas. \n",
     "2. Crop the geodataframe using the SJER boundary (`california/neon-sjer-site/vector_data/SJER_crop.shp`) layer. Name your clipped roads object: `sjer_roads_cl`.\n",
-    "3. Open the SJER plot locations data (`california/neon-sjer-site/vector_data/SJER_plot_centroids.shp`).\n",
+    "3. Open the SJER plot locations data (`california/neon-sjer-site/vector_data/SJER_plot_centroids.shp`). Name your SJER plot locations object: `sjer_plots`.\n",
     "4. Create a map that shows the cropped madera roads layer, SJER plot locations and the SJER boundary (`california/neon-sjer-site/vector_data/SJER_crop.shp`).\n",
     "\n",
     "### Important Notes:\n",
@@ -298,7 +299,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "nbgrader": {
+     "cell_type": "markdown",
+     "checksum": "710761213e789d4c41b58586b0650669",
+     "grade": false,
+     "grade_id": "cell-a455b193cad03fc5",
+     "locked": true,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
    "source": [
     "## Question (5 points)\n",
     "\n",
@@ -359,7 +373,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "744fcb14643c5017f10a6203e81a458f",
+     "checksum": "5db1692c67fddae0bc4d9c8e080b9d85",
      "grade": false,
      "grade_id": "cell-e834a745534251ba",
      "locked": true,
@@ -369,7 +383,7 @@
     }
    },
    "source": [
-    "## Plot 2 - Roads in Del Norte, Modoc & Siskiyou Counties (20 points)\n",
+    "## Plot 2 - Roads in Del Norte, Modoc & Siskiyou Counties (25 points)\n",
     "\n",
     "Create a plot of roads that are located in: Del Norte, Modoc & Siskiyou Counties. To do this, you will need the following layers:\n",
     "\n",
@@ -381,6 +395,8 @@
     "1. Select the three counties that you want to work with in the counties dataset. One fast way to do this is using syntax as follows: \n",
     "\n",
     "`roads_df[roads_df['NAME'].isin([\"Siskiyou\", \"Modoc\", \"Del Norte\"])]`\n",
+    "\n",
+    "Name your county boundaries object: `three_counties`.\n",
     "\n",
     "2. Clip the roads data to the boundary of the counties that you wish to look at.\n",
     "3. Assign each road segment an attribute that identifies it as within each county.\n",
@@ -394,8 +410,8 @@
     "\n",
     "### IMPORTANT: \n",
     "\n",
-    "* Name your final\n",
-    "* Both layers need to the in the SAME coordinate reference system for you to work with them together. REPROJECT both data layers to albers `.to_crs(EPSG=\"5070\")`\n",
+    "* Name your final county boundaries object: `three_counties`.\n",
+    "* Both layers need to the in the SAME coordinate reference system for you to work with them together. REPROJECT both data layers to albers `.to_crs(epsg=5070)`\n",
     "* Clip the roads to the boundary of the three_counties layer that you created which only contains the 3 selected counties: `\"Siskiyou\", \"Modoc\", \"Del Norte\"`\n",
     "* To assign each road to its respective county, you will perform a spatial join using `.sjoin()`.\n",
     "* You will need to redefine the CRS of the roads layer, after the clip, which you can do using something like:\n",
@@ -435,7 +451,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "927d12d535e4fae1ecfdfddf44fecf18",
+     "checksum": "d22fe81ee9793c09f1925f2fd281d635",
      "grade": false,
      "grade_id": "cell-a095a6f952d694b5",
      "locked": false,
@@ -452,7 +468,7 @@
     "# PLOT 2 - Place only the code required to plot your data here\n",
     "# Additional processing code can go above this code cell\n",
     "\n",
-    "# Important: name your final geodataframe: three_counties\n",
+    "# Important: name your final geodataframe for county boundaries: three_counties\n",
     "\n",
     "# YOUR CODE HERE\n",
     "raise NotImplementedError()\n",
@@ -591,11 +607,11 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "6cd8aa7597c638a17ead1996cb00bf33",
+     "checksum": "45133ffc2a4cdae64256523eaec9df70",
      "grade": true,
      "grade_id": "cell-df7e0784334e1225",
      "locked": true,
-     "points": 3,
+     "points": 2,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -610,7 +626,7 @@
     "try:\n",
     "    isinstance(cali_roads_summary, pd.core.frame.DataFrame)\n",
     "    print(\"Great! You created the cali_roads_summary object and it's a Pandas DataFrame. The data inside the DataFrame will be tested separately when your homework is graded!\")\n",
-    "    points+=3\n",
+    "    points+=2\n",
     "except AssertionError as message:\n",
     "    print(\"AssertionError:\",\n",
     "          \"Oops, you nead to create an DataFrame object called cali_roads_summary.\")\n",
@@ -626,11 +642,11 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "e08a34db81a253ddd91cc226ad289401",
+     "checksum": "5b14a771a0a9ca967a14afcd36ffa504",
      "grade": true,
      "grade_id": "cell-990d45c588cbdcca",
      "locked": true,
-     "points": 10,
+     "points": 8,
      "schema_version": 3,
      "solution": false,
      "task": false
@@ -646,7 +662,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "ef5ef137b6408ca1b2c6b533eeeef4f3",
+     "checksum": "bb5215c5400823e6e43ecdb75d17c6a4",
      "grade": false,
      "grade_id": "cell-71869014d31cfa0b",
      "locked": true,
@@ -656,7 +672,7 @@
     }
    },
    "source": [
-    "## Plot 3 - Global Total Estimated Population and Mean Population Rank (20 points)\n",
+    "## Plot 3 - Global Total Estimated Population and Mean Population Rank (25 points)\n",
     "\n",
     "Create a plot of quantile maps of global estimated population by region. To do this, you will use the following layers:\n",
     "\n",
@@ -685,7 +701,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "d298aba7273a9a68fabb03c970221d41",
+     "checksum": "18c3badc20fff842fb895277cd7389e1",
      "grade": false,
      "grade_id": "cell-4d51ad653bc97607",
      "locked": false,
@@ -696,7 +712,7 @@
    },
    "outputs": [],
    "source": [
-    "# PLOT 4 - Place only the code required to plot your data here\n",
+    "# PLOT 3 - Place only the code required to plot your data here\n",
     "# Additional processing code can go above this code cell\n",
     "\n",
     "# Important: name your final geodataframe: mean_region_val\n",
@@ -769,20 +785,24 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "315c6f303b424151f2bb4f73bcaadb94",
+     "checksum": "4da6f8ac25fdaac02a1916e999ad7725",
      "grade": false,
      "grade_id": "cell-a23c63136f242160",
      "locked": true,
-     "points": 7,
+     "points": 10,
      "schema_version": 3,
      "solution": false,
      "task": true
     }
    },
    "source": [
-    "## Do not modify this cell (7 points)\n",
+    "## Do not modify this cell (10 points)\n",
     "\n",
-    "*  here we will grade pep8 format and imports listed at the top following pep 8 conventions."
+    "* Here we will grade pep8 format and imports listed at the top following pep 8 conventions.\n",
+    "* Notebook begins with cell [1] and runs without modifications. \n",
+    "* Be sure that your code can be run on any operating system. This means that:\n",
+    "    * the data should be downloaded in the notebook to ensure it's reproducible\n",
+    "    * all paths should be created dynamically using the os package to ensure that they work across operating systems"
    ]
   }
  ],
